--- a/KillInsteadOfDespawn.csproj
+++ b/KillInsteadOfDespawn.csproj
@@ -151,7 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="KillInsteadOfDespawn.cs" />
-    <Compile Include="sceneTrackerEx.cs" />
+    <Compile Include="WentLightAndDarkEx.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
